RESOLVED FIXED202961
REGRESSION(251087): Several API tests are failing
https://bugs.webkit.org/show_bug.cgi?id=202961
Summary REGRESSION(251087): Several API tests are failing
Per Arne Vollan
Reported 2019-10-14 16:30:07 PDT
r251087 introduced assert failures in debug mode: TestWebKitAPI.WebKit.GetPIDAfterAbortedProcessLaunch ASSERTION FAILED: m_connection Source/WebKit/UIProcess/AuxiliaryProcessProxy.h(69) : IPC::Connection *WebKit::AuxiliaryProcessProxy::connection() const 1 0x10eebb759 WTFCrash 2 0x11c8aaa0b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x11d16c957 WebKit::AuxiliaryProcessProxy::connection() const 4 0x11d3c99d6 WebKit::WebPageProxy::maybeInitializeSandboxExtensionHandle(WebKit::WebProcessProxy&, WTF::URL const&, WTF::URL const&, WebKit::SandboxExtension::Handle&) 5 0x11d3cd8e8 WebKit::WebPageProxy::reload(WTF::OptionSet<WebCore::ReloadOption>) 6 0x11d5fbc8b WKPageReload 7 0x10d267133 TestWebKitAPI::WebKit_GetPIDAfterAbortedProcessLaunch_Test::TestBody()
Attachments
Patch (1.65 KB, patch)
2019-10-14 16:34 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2019-10-14 16:34:58 PDT
Brent Fulgham
Comment 2 2019-10-14 16:44:20 PDT
Comment on attachment 380932 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=380932&action=review r=me > Source/WebKit/UIProcess/WebPageProxy.cpp:1094 > + if (process.isLaunching() || process.wasTerminated()) Whoops!
Per Arne Vollan
Comment 3 2019-10-14 16:45:07 PDT
Comment on attachment 380932 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 4 2019-10-14 18:04:07 PDT
Comment on attachment 380932 [details] Patch Clearing flags on attachment: 380932 Committed r251116: <https://trac.webkit.org/changeset/251116>
WebKit Commit Bot
Comment 5 2019-10-14 18:04:08 PDT
All reviewed patches have been landed. Closing bug.
Ling Ho
Comment 6 2019-10-15 14:18:30 PDT
Note You need to log in before you can comment on or make changes to this bug.